--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     {% block extra_meta %}
     {% endblock %}
 
-    {% block core css %}
+    {% block core_css %}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     {% endblock %}
@@ -22,7 +22,7 @@
     {% block extra_css %}
     {% endblock %}
 
-    {% block core js %}
+    {% block core_js %}
         <script
         src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
